--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 port=3000
 mongoDB_URI=mongodb+srv://Hiaximize:Montse1989!@firstcluster-xus9s.mongodb.net/Member?retryWrites=true&w=majority
-SECRET=feedmeseymour
+SECRET="feedmeseymour"
